# obvhs

./: .gitignore  Cargo.toml
crates/obvhs-wasm/: Cargo.toml
crates/obvhs-wasm/src/: bvh_bridge.rs  lib.rs  memory.rs
src/bvh2/: builder.rs
src/cwbvh/: builder.rs
web/: .npmignore  index.html  obvhs-0.1.0.tgz  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.lib.json  vite.config.ts
web/scripts/: copy-wasm.js
web/src/: index.ts  main.ts  vite-env.d.ts
web/src/bvh/: bvh-manager.ts
web/src/demos/: physics-demo.ts  raytrace-demo.ts
web/src/gpu/: buffer-manager.ts  compute-pipeline.ts  device.ts  render-pipeline.ts
web/src/shaders/: collision.wgsl  cwbvh_common.wgsl  cwbvh_tlas_traverse.wgsl  cwbvh_traverse.wgsl  fullscreen.wgsl  index.ts  ray_trace.wgsl
web/src/utils/: camera.ts  geometry.ts
web/src/wasm/: .gitkeep
web/src/wasm/pkg/: obvhs_wasm.d.ts  obvhs_wasm.js  obvhs_wasm_bg.wasm  obvhs_wasm_bg.wasm.d.ts  package.json
